vue initial done

--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -1,4 +1,5 @@
-<div class="container justified">    
+<div class="container justified">
+    <app-header></app-header>
     <section id="server-message" class="justified">
         <p>Petit message du serveur : {{ message.getValue() }}</p>
         <div class="justified">
@@ -9,7 +10,7 @@
     </section>
 
     <!-- Bouton pour les options de jeux  -->
-    
+
     <button class="button" mat-flat-button color="primary" routerLink="/game-selection">Mode Classique</button>
     <button class="button" mat-flat-button color="primary">Mode Temps limité</button>
     <button class="button" mat-stroked-button color="primary">Configuration</button>
@@ -19,8 +20,8 @@
     <footer class="footer-item">
         <h4 class="team-name">Équipe 209</h4>
         <p>
-            <span>Ahmed El Shami</span>, <span>Skander Hannachi</span>, <span>Ziad Kaabie</span>, 
-            <span>Rayan Fellah</span>, <span>Mohammed Awad</span>, <span>Radwan Rahman</span>
+            <span>Ahmed El Shami</span>, <span>Skander Hannachi</span>, <span>Ziad Kaabie</span>, <span>Rayan Fellah</span>,
+            <span>Mohammed Awad</span>, <span>Radwan Rahman</span>
         </p>
     </footer>
 </div>
