lancement vue configuration

--- a/client/src/app/components/game-cards-grid/game-cards-grid.component.html
+++ b/client/src/app/components/game-cards-grid/game-cards-grid.component.html
@@ -1,9 +1,9 @@
 <div class="button-navigator">
-    <button type="button" (click)="prevGrid()">
+    <button [ngClass]="{ hidden: gridIndexStart == 0 }" type="button" (click)="prevGrid()">
         Prev
         <mat-icon>arrow_left</mat-icon>
     </button>
-    <button type="button" (click)="nextGrid()">
+    <button type="button" [ngClass]="{ hidden: gridIndexEnd >= games.length }" (click)="nextGrid()">
         next
         <mat-icon>arrow_right</mat-icon>
     </button>
