--- a/client/src/app/components/game-cards-grid/game-cards-grid.component.scss
+++ b/client/src/app/components/game-cards-grid/game-cards-grid.component.scss
@@ -4,7 +4,7 @@
 }
 .center {
     display: block;
-    width: 25%;
+    width: 70%;
 }
 
 mat-grid-list {
@@ -17,7 +17,6 @@ mat-grid-tile {
     display: inline-block;
     width: 100%;
     margin: 10px;
-    vertical-align: top;
 }
 
 button:nth-of-type(1) {
@@ -105,4 +104,8 @@ h3 {
 h2 {
     text-align: center;
     margin-bottom: 10px;
+}
+
+.hidden {
+    visibility: hidden;
 }
