--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -13,7 +13,7 @@
 
     <button class="button" mat-flat-button color="primary" routerLink="/selection-page">Mode Classique</button>
     <button class="button" mat-flat-button color="primary">Mode Temps limité</button>
-    <button class="button" mat-stroked-button color="primary">Configuration</button>
+    <button class="button" mat-stroked-button color="primary" routerLink="/configuration-page">Configuration</button>
 
     <button class="button" routerLink="/game">Jouer!</button>
 
