--- a/client/src/app/components/game-cards-grid/game-cards-grid.component.html
+++ b/client/src/app/components/game-cards-grid/game-cards-grid.component.html
@@ -11,28 +11,31 @@
 <mat-grid-list cols="4">
     <mat-grid-tile *ngFor="let game of games.slice(gridIndexStart, gridIndexEnd)" rowspan="2">
         <mat-grid-tile-header>
-            <a class="center" [title]="game.name">
-                {{ game.name }}
-            </a>
+            <div class="game-title">
+                <h2>{{ game.name }}</h2>
+            </div>
+        </mat-grid-tile-header>
+        <mat-card-content>
             <div class="difficulty-container">
+                <h3 [ngClass]="{ 'easy-border': game.difficulty === 'easy', 'hard-border': game.difficulty === 'hard' }">{{ game.difficulty }}</h3>
                 <div class="difficulty-bar">
                     <div *ngIf="game.difficulty === 'easy'" class="difficulty-bar easy"></div>
                     <div *ngIf="game.difficulty === 'hard'" class="difficulty-bar hard"></div>
                 </div>
             </div>
-        </mat-grid-tile-header>
-        <mat-card-content>
-            <img src="..\..\assets\all.jpg" alt="jeu image" />
+            <img src="..\..\assets\all.jpg" alt="game image" />
 
-            <h2>TOP 3 Best Scores</h2>
             <div class="scores-container">
-                <div class="scores-solo">
-                    <h3>Solo</h3>
-                    <app-game-score></app-game-score>
-                </div>
-                <div class="scores-1V1">
-                    <h3>1 vs 1</h3>
-                    <app-game-score></app-game-score>
+                <h2>TOP 3</h2>
+                <div class="scores-details-container">
+                    <div class="scores-solo">
+                        <h3>Solo</h3>
+                        <app-game-score></app-game-score>
+                    </div>
+                    <div class="scores-1V1">
+                        <h3>1 vs 1</h3>
+                        <app-game-score></app-game-score>
+                    </div>
                 </div>
             </div>
         </mat-card-content>
