create + settings buttons

--- a/client/src/app/pages/configuration-page/configuration-page.component.html
+++ b/client/src/app/pages/configuration-page/configuration-page.component.html
@@ -1,2 +1,5 @@
-<app-header></app-header>
-<app-game-cards-grid></app-game-cards-grid>
+<body>
+    <app-header></app-header>
+    <app-config-buttons></app-config-buttons>
+    <app-game-cards-grid></app-game-cards-grid>
+</body>
