--- a/client/src/app/pages/selection-page/selection-page.component.html
+++ b/client/src/app/pages/selection-page/selection-page.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
-<app-game-cards-grid></app-game-cards-grid>
+<body>
+    <app-header></app-header>
+    <app-game-cards-grid></app-game-cards-grid>
+</body>
