game constants done

--- a/client/src/app/components/config-buttons/config-buttons.component.html
+++ b/client/src/app/components/config-buttons/config-buttons.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="settings-button">
-        <button mat-fab color="primary" matTooltip="Paramètres du jeu">
+        <button (click)="openDialog()" mat-fab color="primary" matTooltip="Paramètres du jeu">
             <mat-icon>build</mat-icon>
         </button>
     </div>
