upload images in both canvas individually and game cration page created

--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -11,11 +11,11 @@
 
     <!-- Bouton pour les options de jeux  -->
 
-    <button class="button" mat-flat-button color="primary" routerLink="/game-selection">Mode Classique</button>
-    <button class="button" mat-flat-button color="primary">Mode Temps limité</button>
-    <button class="button" mat-stroked-button color="primary">Configuration</button>
+    <button class="button" mat-stroked-button color="black" routerLink="/game-selection">Mode Classique</button>
+    <button class="button" mat-stroked-button color="black">Mode Temps limité</button>
+    <button class="button" mat-stroked-button color="black">Configuration</button>
 
-    <button class="button" routerLink="/game">Jouer!</button>
+    <button class="button" routerLink="/creation">Jouer!</button>
 
     <footer class="footer-item">
         <h4 class="team-name">Équipe 209</h4>
