--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -1,7 +1,5 @@
-mat-toolbar {
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    width: 100vw
+header {
+    padding: 10px;
+    width: 100%;
+    height: 30px;
 }
-
