--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -70,11 +70,11 @@ $indigo-pink-theme: mat.define-light-theme(
 
 /* You can add global styles to this file, and also import other style files */
 
-html,
-body {
+html {
     height: 100%;
 }
 body {
+    min-height: 100%;
     margin: 0;
     font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
