--- a/client/src/app/components/game-constants/game-constants.component.html
+++ b/client/src/app/components/game-constants/game-constants.component.html
@@ -1,4 +1,4 @@
-<div class="mat-dialog-container">
+<div>
     <h1 mat-dialog-title>constantes de jeu</h1>
     <div mat-dialog-content>
         Temps de jeu :
