--- a/client/src/app/components/config-buttons/config-buttons.component.html
+++ b/client/src/app/components/config-buttons/config-buttons.component.html
@@ -1,6 +1,6 @@
 <div class="config-buttons">
     <div class="create-game-button">
-        <button mat-fab color="primary" matTooltip="Créer un nouveau jeu">
+        <button mat-fab color="primary" matTooltip="Créer un nouveau jeu" routerLink="/creation">
             <mat-icon>add</mat-icon>
         </button>
     </div>
