--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -1,5 +1,6 @@
-header {
-    padding: 10px;
-    width: 100%;
-    height: 30px;
+mat-toolbar {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    width: 100vw;
 }
