--- a/client/src/app/components/image-area/image-area.component.scss
+++ b/client/src/app/components/image-area/image-area.component.scss
@@ -5,22 +5,28 @@
     align-items: center;
 }
 #foreground {
-    position: absolute;
-    left: 0;
-    top: 0;
     z-index: 1;
+    border: solid 1px black;
 }
 
 #background {
-    position: absolute;
-    border: 1px solid black;
-    left: 0;
-    top: 0;
+    border: solid 1px black;
     z-index: 0;
 }
 
 .canvas {
     position: relative;
-    height: 480px;
-    width: 640px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
+    max-width: 640px;
+    max-height: 480px;
+    position: relative;
+    grid-row-start: 1;
+    grid-column-start: 1;
 }
