--- a/client/src/app/pages/game-creation-page/game-creation-page.component.html
+++ b/client/src/app/pages/game-creation-page/game-creation-page.component.html
@@ -1,15 +1,21 @@
-<app-header></app-header>
-<main>
-    <section>
-        <h1 id="sectionHeader">Images de jeu</h1>
-        <article class="OGImg">
-            <h2>Image originale :</h2>
-            <app-image-area></app-image-area>
-        </article>
-        <article class="newbieImg">
-            <h2>Image avec différences :</h2>
-            <app-image-area></app-image-area>
-        </article>
-    </section>
-</main>
-<footer></footer>
+<div class="flex-box">
+    <header>
+        <h1>CREATION D'UNE PARTIE</h1>
+    </header>
+    <main>
+        <section>
+            <h2 id="sectionHeader">Images de jeu</h2>
+            <article class="OGImg">
+                <h3>Image originale :</h3>
+                <app-image-area></app-image-area>
+            </article>
+            <article class="newbieImg">
+                <h3>Image avec différences :</h3>
+                <app-image-area></app-image-area>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>Projet 2 équipe 209 Hiver 2023 à PolyMtl.</p>
+    </footer>
+</div>
