--- a/client/src/app/pages/game-creation-page/game-creation-page.component.scss
+++ b/client/src/app/pages/game-creation-page/game-creation-page.component.scss
@@ -1,5 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+.flex-box {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 #sectionHeader {
     grid-area: hd;
+    font-weight: bold;
 }
 
 .OGImg {
@@ -17,9 +27,11 @@
 }
 
 section {
+    padding: 10px;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto;
+    grid-column-gap: 10px;
     grid-template-areas:
         'hd hd hd hd'
         'OG OG newbie newbie';
@@ -27,4 +39,18 @@ section {
 
 h1 {
     font-weight: bolder;
+}
+h3 {
+    margin: 0;
+    font-weight: bold;
+}
+header {
+    flex: 0 1 auto;
+}
+main {
+    flex: 1 1 auto;
+    flex-grow: 2;
+}
+footer {
+    flex: 0 1 40px;
 }
