--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -1,13 +1,13 @@
 <div class="container justified">
     <app-header></app-header>
-    <section id="server-message" class="justified">
+    <!-- <section id="server-message" class="justified">
         <p>Petit message du serveur : {{ message.getValue() }}</p>
         <div class="justified">
             <button class="button" (click)="getMessagesFromServer()">Récupérer un message du serveur</button>
             <button class="button" (click)="sendTimeToServer()">Envoyer un message au serveur</button>
             <button class="button" routerLink="/material">Voir la page démo Angular Material</button>
         </div>
-    </section>
+    </section> -->
 
     <!-- Bouton pour les options de jeux  -->
 
