--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -77,4 +77,18 @@ body {
     min-height: 100%;
     margin: 0;
     font-family: Roboto, 'Helvetica Neue', sans-serif;
+    
+}
+
+
+::-webkit-scrollbar
+{
+  width: 10px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #aeaeae;
 }
