--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -11,16 +11,16 @@
 
     <!-- Bouton pour les options de jeux  -->
 
-    <button class="button" mat-flat-button color="primary" routerLink="/game-selection">Mode Classique</button>
+    <button class="button" mat-flat-button color="primary" routerLink="/selection-page">Mode Classique</button>
     <button class="button" mat-flat-button color="primary">Mode Temps limité</button>
-    <button class="button" mat-stroked-button color="primary">Configuration</button>
+    <button class="button" mat-stroked-button color="primary" routerLink="/config">Configuration</button>
 
-    <button class="button" routerLink="/game">Jouer!</button>
+    <button class="button" routerLink="/creation">Jouer!</button>
 
     <footer class="footer-item">
         <h4 class="team-name">Équipe 209</h4>
         <p>
-            <span>Ahmed El Shami</span>, <span>Skander Hannachi</span>, <span>Ziad Kaabie</span>, <span>Rayan Fellah</span>,
+            <span>Ahmed El Shami</span>, <span>Skander Hannachi</span>, <span>Zied Kaabi</span>, <span>Rayan Fellah</span>,
             <span>Mohammed Awad</span>, <span>Radwan Rahman</span>
         </p>
     </footer>
