services pour les images completer

--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -1,5 +1,7 @@
-header {
-    padding: 10px;
-    width: 100%;
-    height: 30px;
+.header {
+    width: 100vw;
+    line-height: 25px;
+}
+.header span{
+    font-size: 25px;
 }
