--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -41,11 +41,9 @@
         <!-- Bouton pour les options de jeux  -->
     
     <div id="option">
-        <button class="button" mat-stroked-button color="primary" routerLink="/game-selection">Mode Classique</button>
+        <button class="button" mat-stroked-button color="primary" routerLink="/app-selection-page">Mode Classique</button>
         <button class="button" mat-stroked-button color="primary">Mode Temps limité</button>
-        <button class="button" mat-stroked-button color="accent">Configuration</button>
-
-        <button class="button" routerLink="/creation">Jouer!</button>
+        <button class="button" mat-stroked-button color="accent" routerLink="/config">Configuration</button>
     </div>
     
     
