--- a/client/src/app/components/play-area/play-area.component.html
+++ b/client/src/app/components/play-area/play-area.component.html
@@ -1,12 +1,23 @@
-<div id="grid-container">
+<div id="image-container">
     <p>Section de jeu!</p>
-    <canvas id="canvas" #gridCanvas (click)="mouseHitDetect($event)" [attr.width]="width" [attr.height]="height"></canvas>
-    <div id="mouse-position-display">
-        <p>Cliquez sur la grille pour avoir la position de la souris</p>
-        <p *ngIf="mousePosition.x !== 0">X : {{ mousePosition.x }}</p>
-        <p *ngIf="mousePosition.y !== 0">Y : {{ mousePosition.y }}</p>
-        <hr />
-        <p>Appuyez sur une touche du clavier pour la détecter</p>
-        <p *ngIf="buttonPressed !== ''"> Touche : {{ buttonPressed }}</p>
-    </div>
+    <section>
+        <article class="original">
+            <canvas id="canvas" (click)="mouseHitDetect($event)" [attr.width]="width" [attr.height]="height"></canvas>
+            <div id="mouse-position-display">
+                <h3>Image Originale</h3>
+                <p *ngIf="mousePosition.x !== 0">X : {{ mousePosition.x }}</p>
+                <p *ngIf="mousePosition.y !== 0">Y : {{ mousePosition.y }}</p>
+                <hr />
+            </div>
+        </article>
+        <article class="modified">
+            <canvas id="canvas" (click)="mouseHitDetect($event)" [attr.width]="width" [attr.height]="height"></canvas>
+            <div id="mouse-position-display">
+                <h3>Image Modifiée</h3>
+                <p *ngIf="mousePosition.x !== 0">X : {{ mousePosition.x }}</p>
+                <p *ngIf="mousePosition.y !== 0">Y : {{ mousePosition.y }}</p>
+                <hr />
+            </div>
+        </article>
+    </section>
 </div>
