--- a/client/src/app/components/play-area/play-area.component.html
+++ b/client/src/app/components/play-area/play-area.component.html
@@ -1,21 +1,21 @@
-<div id="image-container">
+<div id="play-area-container">
     <p>Section de jeu!</p>
     <section>
         <article class="original">
-            <canvas id="canvas" (click)="mouseHitDetect($event)" [attr.width]="width" [attr.height]="height"></canvas>
+            <canvas id="canvas" (click)="mouseHitDetectOrigin($event)" [attr.width]="width" [attr.height]="height"></canvas>
             <div id="mouse-position-display">
                 <h3>Image Originale</h3>
-                <p *ngIf="mousePosition.x !== 0">X : {{ mousePosition.x }}</p>
-                <p *ngIf="mousePosition.y !== 0">Y : {{ mousePosition.y }}</p>
+                <p *ngIf="mousePositionOriginal.x !== 0">X : {{ mousePositionOriginal.x }}</p>
+                <p *ngIf="mousePositionOriginal.y !== 0">Y : {{ mousePositionOriginal.y }}</p>
                 <hr />
             </div>
         </article>
         <article class="modified">
-            <canvas id="canvas" (click)="mouseHitDetect($event)" [attr.width]="width" [attr.height]="height"></canvas>
+            <canvas id="canvas" (click)="mouseHitDetectModified($event)" [attr.width]="width" [attr.height]="height"></canvas>
             <div id="mouse-position-display">
                 <h3>Image Modifiée</h3>
-                <p *ngIf="mousePosition.x !== 0">X : {{ mousePosition.x }}</p>
-                <p *ngIf="mousePosition.y !== 0">Y : {{ mousePosition.y }}</p>
+                <p *ngIf="mousePositionModified.x !== 0">X : {{ mousePositionModified.x }}</p>
+                <p *ngIf="mousePositionModified.y !== 0">Y : {{ mousePositionModified.y }}</p>
                 <hr />
             </div>
         </article>
