--- a/client/src/app/pages/game-page/game-page.component.scss
+++ b/client/src/app/pages/game-page/game-page.component.scss
@@ -19,15 +19,15 @@ section {
     margin-left: 200px;
     display: grid;
     grid-template-rows: auto;
-    grid-template-areas:
-        'OG OG newbie newbie';
+    grid-template-areas: 'OG OG newbie newbie';
 }
 
-h1{
-    margin-bottom: 10px;
+h1 {
+    margin-bottom: 100px;
     font-weight: bold;
+    color: rgb(187, 9, 9);
 }
 
-article{
+article {
     margin-right: 20px;
 }
