image upload problem

--- a/client/src/app/components/game-cards-grid/game-cards-grid.component.html
+++ b/client/src/app/components/game-cards-grid/game-cards-grid.component.html
@@ -1,21 +1,21 @@
 <mat-grid-list cols="4">
-    <mat-grid-tile *ngFor="let game of games.slice(gridIndexStart, gridIndexEnd); let gameIndex = index" rowspan="2">
+    <mat-grid-tile *ngFor="let sheet of this.gameSheets.slice(gridIndexStart, gridIndexEnd); let gameIndex = index" rowspan="2">
         <mat-grid-tile-header>
             <div class="game-title">
-                <h2>{{ game.name }}</h2>
+                <h2>{{ sheet.name }}</h2>
             </div>
         </mat-grid-tile-header>
         <mat-card-content>
             <div class="difficulty-container">
-                <h3 [ngClass]="{ 'easy-border': game.difficulty === 'easy', 'hard-border': game.difficulty === 'hard' }">
-                    {{ game.difficulty }}
+                <h3 [ngClass]="{ 'easy-border': sheet.difficulty === 'easy', 'hard-border': sheet.difficulty === 'hard' }">
+                    {{ sheet.difficulty }}
                 </h3>
                 <div class="difficulty-bar">
-                    <div *ngIf="game.difficulty === 'easy'" class="difficulty-bar easy"></div>
-                    <div *ngIf="game.difficulty === 'hard'" class="difficulty-bar hard"></div>
+                    <div *ngIf="sheet.difficulty === 'easy'" class="difficulty-bar easy"></div>
+                    <div *ngIf="sheet.difficulty === 'hard'" class="difficulty-bar hard"></div>
                 </div>
             </div>
-            <img src="..\..\assets\all.jpg" alt="game image" />
+            <!-- <img [src]="sheet.image" alt="game image" /> -->
 
             <div class="scores-container">
                 <h2>TOP 3</h2>
@@ -35,6 +35,7 @@
             <app-game-card-buttons
                 [selectedGame]="selectedGame"
                 (deleteGame)="deleteGame($event)"
+                (selectGame)="selectGame($event)"
                 [isConfigPage]="isConfigPage"
             ></app-game-card-buttons>
         </mat-grid-tile-footer>
