http problem fix

--- a/client/src/app/pages/game-page/game-page.component.html
+++ b/client/src/app/pages/game-page/game-page.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
-<h1>{{ selectedGame }}</h1>
+<h1>
+    Bienvenue <span class="player-name"> {{ playerName }}</span>
+</h1>
 <app-timer></app-timer>
 <app-play-area></app-play-area>
