--- a/client/src/app/components/game-cards-grid/game-cards-grid.component.html
+++ b/client/src/app/components/game-cards-grid/game-cards-grid.component.html
@@ -33,9 +33,9 @@
         </mat-card-content>
         <mat-grid-tile-footer>
             <app-game-card-buttons
-                [selectedGame]="selectedGame"
+                [idx]="gameIndex"
+                (sendIdx)="sendSheet($event)"
                 (deleteGame)="deleteGame($event)"
-                (selectGame)="selectGame($event)"
                 [isConfigPage]="isConfigPage"
             ></app-game-card-buttons>
         </mat-grid-tile-footer>
