--- a/client/src/app/pages/game-page/game-page.component.scss
+++ b/client/src/app/pages/game-page/game-page.component.scss
@@ -3,31 +3,10 @@
     display: flex;
 }
 
-.play-area-container {
-    overflow: auto;
-    flex: 1 1 auto;
-}
-
-.play-area {
-    display: grid;
-    width: min-content;
-    outline: none;
-}
-
-section {
-    padding: 20px;
-    margin-left: 200px;
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-areas: 'OG OG newbie newbie';
-}
-
 h1 {
-    margin-bottom: 100px;
     font-weight: bold;
-    color: rgb(187, 9, 9);
 }
 
-article {
-    margin-right: 20px;
+.player-name {
+    color: rgb(29, 146, 179);
 }
