starting images debug

--- a/client/src/app/components/game-cards-grid/game-cards-grid.component.html
+++ b/client/src/app/components/game-cards-grid/game-cards-grid.component.html
@@ -15,7 +15,7 @@
                     <div *ngIf="sheet.difficulty === 'hard'" class="difficulty-bar hard"></div>
                 </div>
             </div>
-            <!-- <img [src]="sheet.image" alt="game image" /> -->
+            <img src="" alt="game image" />
 
             <div class="scores-container">
                 <h2>TOP 3</h2>
@@ -42,7 +42,7 @@
     </mat-grid-tile>
 </mat-grid-list>
 <div class="button-navigator">
-    <button mat-fab color="primary" [ngClass]="{ hidden: gridIndexStart == 0 }" matTooltip="Prev" (click)="prevGrid()">
+    <button mat-fab color="primary" [ngClass]="{ hidden: gridIndexStart === 0 }" matTooltip="Prev" (click)="prevGrid()">
         <mat-icon>chevron_left</mat-icon>
     </button>
     <button mat-fab color="primary" [ngClass]="{ hidden: gridIndexStart + 4 >= games.length }" matTooltip="Next" (click)="nextGrid()">
