Canvas not working--debug this shit

--- a/client/src/app/components/play-area/play-area.component.html
+++ b/client/src/app/components/play-area/play-area.component.html
@@ -1,20 +1,20 @@
 <div id="play-area-container">
     <section>
         <article class="original">
-            <canvas id="canvas" (click)="mouseHitDetectOrigin($event)" [attr.width]="width" [attr.height]="height"></canvas>
+            <canvas name="canvas1" id="canvas" (click)="handleClick($event)" [attr.width]="width" [attr.height]="height"></canvas>
             <div id="mouse-position-display">
                 <h3>Image Originale</h3>
-                <p *ngIf="mousePositionOriginal.x !== 0">X : {{ mousePositionOriginal.x }}</p>
-                <p *ngIf="mousePositionOriginal.y !== 0">Y : {{ mousePositionOriginal.y }}</p>
+                <!-- <p *ngIf="mousePositionOriginal.x !== 0">X : {{ mousePositionOriginal.x }}</p>
+                <p *ngIf="mousePositionOriginal.y !== 0">Y : {{ mousePositionOriginal.y }}</p> -->
                 <hr />
             </div>
         </article>
         <article class="modified">
-            <canvas id="canvas" (click)="mouseHitDetectModified($event)" [attr.width]="width" [attr.height]="height"></canvas>
+            <canvas name="canvas2" id="canvas" (click)="handleClick($event)" [attr.width]="width" [attr.height]="height"></canvas>
             <div id="mouse-position-display">
                 <h3>Image Modifiée</h3>
-                <p *ngIf="mousePositionModified.x !== 0">X : {{ mousePositionModified.x }}</p>
-                <p *ngIf="mousePositionModified.y !== 0">Y : {{ mousePositionModified.y }}</p>
+                <!-- <p *ngIf="mousePositionModified.x !== 0">X : {{ mousePositionModified.x }}</p>
+                <p *ngIf="mousePositionModified.y !== 0">Y : {{ mousePositionModified.y }}</p> -->
                 <hr />
             </div>
         </article>
