--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -8,45 +8,77 @@
         </div>
     </section> -->
     <app-header class="header-item"></app-header>
-    
+
     <div id="presentation">
         <svg width="400" height="400" viewBox="0 0 1080 1080" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <rect width="" height="" fill=""/>
-            <path d="M479.25 60.75H60.75V479.25H479.25V60.75Z" fill="#FFC49C"/>
-            <path d="M472.5 67.5V472.5H67.5V67.5H472.5ZM486 54H54V486H486V54Z" fill="#A16A4A"/>
-            <path d="M1019.25 600.75H600.75V1019.25H1019.25V600.75Z" fill="#BAE0BD"/>
-            <path d="M1012.5 607.5V1012.5H607.5V607.5H1012.5ZM1026 594H594V1026H1026V594Z" fill="#5E9C76"/>
-            <path d="M479.25 600.75H60.75V1019.25H479.25V600.75Z" fill="#8BB7F0"/>
-            <path d="M472.5 607.5V1012.5H67.5V607.5H472.5ZM486 594H54V1026H486V594Z" fill="#4E7AB5"/>
-            <path d="M269.993 661.501L121.498 809.996L269.993 958.491L418.488 809.996L269.993 661.501Z" fill="#FFEEA3"/>
-            <path d="M378 702H162V918H378V702Z" fill="#FFEEA3"/>
-            <path d="M351 270L270 337.5L378 472.5H472.5V378L351 270Z" fill="#A16A4A"/>
-            <path d="M378 202.5C400.368 202.5 418.5 184.368 418.5 162C418.5 139.632 400.368 121.5 378 121.5C355.632 121.5 337.5 139.632 337.5 162C337.5 184.368 355.632 202.5 378 202.5Z" fill="white"/>
-            <path d="M418.5 472.5H67.5V378L202.5 243L418.5 472.5Z" fill="#E09367"/>
-            <path d="M810 810L770.675 744.458C752.328 713.894 774.347 675 810 675C845.654 675 867.672 713.894 849.325 744.458L810 810Z" fill="white"/>
-            <path d="M810 810L849.325 875.543C867.672 906.107 845.654 945 810 945C774.347 945 752.328 906.107 770.675 875.543L810 810Z" fill="white"/>
-            <path d="M837 823.5L735.21 809.987C699.57 810.581 676.903 772.079 694.723 741.204C712.543 710.33 757.242 710.708 774.536 741.879L837 823.5Z" fill="white"/>
-            <path d="M796.5 796.5L884.79 810.013C920.43 809.419 943.097 847.922 925.277 878.796C907.457 909.671 862.758 909.292 845.464 878.121L796.5 796.5Z" fill="white"/>
-            <path d="M837 796.5L774.536 878.121C757.229 909.292 712.543 909.671 694.723 878.796C676.903 847.922 699.57 809.406 735.21 810.013L837 796.5Z" fill="white"/>
-            <path d="M783 823.5L845.464 741.879C862.771 710.708 907.457 710.33 925.277 741.204C943.097 772.079 920.43 810.594 884.79 809.987L783 823.5Z" fill="white"/>
-            <path d="M810 864C839.823 864 864 839.823 864 810C864 780.177 839.823 756 810 756C780.177 756 756 780.177 756 810C756 839.823 780.177 864 810 864Z" fill="#FFEEA3"/>
-            <path d="M270 864C299.823 864 324 839.823 324 810C324 780.177 299.823 756 270 756C240.177 756 216 780.177 216 810C216 839.823 240.177 864 270 864Z" fill="white"/>
-            <path d="M1019.25 60.75H600.75V479.25H1019.25V60.75Z" fill="#C2E8FF"/>
-            <path d="M1012.5 67.5V472.5H607.5V67.5H1012.5ZM1026 54H594V486H1026V54Z" fill="#7496C4"/>
-            <path d="M891 297C889.731 297 888.678 297.634 887.436 297.715C880.74 282.069 868.603 270 850.5 270C844.978 270 837.891 270.891 831.586 274.239C822.946 255.892 804.613 243 783 243C753.178 243 729 267.178 729 297C699.178 297 675 321.178 675 351C675 380.822 699.178 405 729 405C758.822 405 863.311 405 891 405C920.822 405 945 380.822 945 351C945 321.178 920.822 297 891 297Z" fill="white"/>
-            <path d="M918 202.5C940.368 202.5 958.5 184.368 958.5 162C958.5 139.632 940.368 121.5 918 121.5C895.632 121.5 877.5 139.632 877.5 162C877.5 184.368 895.632 202.5 918 202.5Z" fill="white"/>
+            <rect width="" height="" fill="" />
+            <path d="M479.25 60.75H60.75V479.25H479.25V60.75Z" fill="#FFC49C" />
+            <path d="M472.5 67.5V472.5H67.5V67.5H472.5ZM486 54H54V486H486V54Z" fill="#A16A4A" />
+            <path d="M1019.25 600.75H600.75V1019.25H1019.25V600.75Z" fill="#BAE0BD" />
+            <path d="M1012.5 607.5V1012.5H607.5V607.5H1012.5ZM1026 594H594V1026H1026V594Z" fill="#5E9C76" />
+            <path d="M479.25 600.75H60.75V1019.25H479.25V600.75Z" fill="#8BB7F0" />
+            <path d="M472.5 607.5V1012.5H67.5V607.5H472.5ZM486 594H54V1026H486V594Z" fill="#4E7AB5" />
+            <path d="M269.993 661.501L121.498 809.996L269.993 958.491L418.488 809.996L269.993 661.501Z" fill="#FFEEA3" />
+            <path d="M378 702H162V918H378V702Z" fill="#FFEEA3" />
+            <path d="M351 270L270 337.5L378 472.5H472.5V378L351 270Z" fill="#A16A4A" />
+            <path
+                d="M378 202.5C400.368 202.5 418.5 184.368 418.5 162C418.5 139.632 400.368 121.5 378 121.5C355.632 121.5 337.5 139.632 337.5 162C337.5 184.368 355.632 202.5 378 202.5Z"
+                fill="white"
+            />
+            <path d="M418.5 472.5H67.5V378L202.5 243L418.5 472.5Z" fill="#E09367" />
+            <path
+                d="M810 810L770.675 744.458C752.328 713.894 774.347 675 810 675C845.654 675 867.672 713.894 849.325 744.458L810 810Z"
+                fill="white"
+            />
+            <path
+                d="M810 810L849.325 875.543C867.672 906.107 845.654 945 810 945C774.347 945 752.328 906.107 770.675 875.543L810 810Z"
+                fill="white"
+            />
+            <path
+                d="M837 823.5L735.21 809.987C699.57 810.581 676.903 772.079 694.723 741.204C712.543 710.33 757.242 710.708 774.536 741.879L837 823.5Z"
+                fill="white"
+            />
+            <path
+                d="M796.5 796.5L884.79 810.013C920.43 809.419 943.097 847.922 925.277 878.796C907.457 909.671 862.758 909.292 845.464 878.121L796.5 796.5Z"
+                fill="white"
+            />
+            <path
+                d="M837 796.5L774.536 878.121C757.229 909.292 712.543 909.671 694.723 878.796C676.903 847.922 699.57 809.406 735.21 810.013L837 796.5Z"
+                fill="white"
+            />
+            <path
+                d="M783 823.5L845.464 741.879C862.771 710.708 907.457 710.33 925.277 741.204C943.097 772.079 920.43 810.594 884.79 809.987L783 823.5Z"
+                fill="white"
+            />
+            <path
+                d="M810 864C839.823 864 864 839.823 864 810C864 780.177 839.823 756 810 756C780.177 756 756 780.177 756 810C756 839.823 780.177 864 810 864Z"
+                fill="#FFEEA3"
+            />
+            <path
+                d="M270 864C299.823 864 324 839.823 324 810C324 780.177 299.823 756 270 756C240.177 756 216 780.177 216 810C216 839.823 240.177 864 270 864Z"
+                fill="white"
+            />
+            <path d="M1019.25 60.75H600.75V479.25H1019.25V60.75Z" fill="#C2E8FF" />
+            <path d="M1012.5 67.5V472.5H607.5V67.5H1012.5ZM1026 54H594V486H1026V54Z" fill="#7496C4" />
+            <path
+                d="M891 297C889.731 297 888.678 297.634 887.436 297.715C880.74 282.069 868.603 270 850.5 270C844.978 270 837.891 270.891 831.586 274.239C822.946 255.892 804.613 243 783 243C753.178 243 729 267.178 729 297C699.178 297 675 321.178 675 351C675 380.822 699.178 405 729 405C758.822 405 863.311 405 891 405C920.822 405 945 380.822 945 351C945 321.178 920.822 297 891 297Z"
+                fill="white"
+            />
+            <path
+                d="M918 202.5C940.368 202.5 958.5 184.368 958.5 162C958.5 139.632 940.368 121.5 918 121.5C895.632 121.5 877.5 139.632 877.5 162C877.5 184.368 895.632 202.5 918 202.5Z"
+                fill="white"
+            />
         </svg>
     </div>
 
-        <!-- Bouton pour les options de jeux  -->
-    
+    <!-- Bouton pour les options de jeux  -->
+
     <div id="option">
         <button class="button" mat-stroked-button color="primary" routerLink="/app-selection-page">Mode Classique</button>
         <button class="button" mat-stroked-button color="primary">Mode Temps limité</button>
         <button class="button" mat-stroked-button color="accent" routerLink="/config">Configuration</button>
     </div>
-    
-    
+
     <footer class="footer-item">
         <h4 class="team-name">Équipe 209</h4>
         <p>
