--- a/client/src/app/pages/game-page/game-page.component.html
+++ b/client/src/app/pages/game-page/game-page.component.html
@@ -2,5 +2,6 @@
 <h1>
     Bienvenue <span class="player-name"> {{ playerName }}</span>
 </h1>
+<app-differences-found></app-differences-found>
 <app-timer></app-timer>
 <app-play-area></app-play-area>
