--- a/client/src/app/components/timer/timer.component.html
+++ b/client/src/app/components/timer/timer.component.html
@@ -1,3 +1,3 @@
-<!-- <div class="timer">
+<div class="timer">
     {{ minutes.toLocaleString(undefined, { minimumIntegerDigits: 2 }) }}:{{ seconds.toLocaleString(undefined, { minimumIntegerDigits: 2 }) }}
-</div> -->
+</div>
