--- a/client/src/app/components/differences-found/differences-found.component.html
+++ b/client/src/app/components/differences-found/differences-found.component.html
@@ -1,6 +1,6 @@
 <div class="differences-container">
     <div class="found" *ngFor="let difference of differences">
-        <mat-icon [ngClass]="{ 'found-lightbulb': difference.isFound, 'not-found-lightbulb': !difference.isFound }"> lightbulb_outline </mat-icon>
+        <mat-icon [ngClass]="{ 'found-lightbulb': difference, 'not-found-lightbulb': !difference }"> lightbulb_outline </mat-icon>
     </div>
 </div>
 <div *ngIf="allDifferencesFound" class="congratulations-message">Congratulations! You found all the differences.</div>
