--- a/client/src/app/pages/game-creation-page/game-creation-page.component.scss
+++ b/client/src/app/pages/game-creation-page/game-creation-page.component.scss
@@ -93,3 +93,16 @@ form {
     justify-content: space-around;
     align-items: center;
 }
+.image-info {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.retour {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
