--- a/client/src/app/components/config-buttons/config-buttons.component.html
+++ b/client/src/app/components/config-buttons/config-buttons.component.html
@@ -7,7 +7,7 @@
 
     <div class="settings-button">
         <button (click)="openDialog()" mat-fab color="primary" matTooltip="Paramètres du jeu">
-            <mat-icon>build</mat-icon>
+            <mat-icon>buil</mat-icon>
         </button>
     </div>
 </div>
